Fix outline issues on Firefox 68

--- a/src/components/navbar/link/styles.scss
+++ b/src/components/navbar/link/styles.scss
@@ -18,6 +18,7 @@
         align-items: center;
 
         list-style: none;
+        outline: none;
         cursor: pointer;
         user-select: none;
         text-decoration: none;
